# 4D

./: .gitignore  CMakeLists.txt  CMakePresets.json
DataType/: MultiparameterDependentStructuredGridnD.cpp  MultiparameterDependentStructuredGridnD.h
LaTex/: Ableitungen.txt  Example.tex
Paper/: Paper.tex  Paper_Body.inc  eurovis2022.sty
PipelineDefs/: DoubleFilter.h  DoubleRenderer.h  Filter.h  HasInput.h  HasOutput.h  HasSecondaryInput.h  Renderer.h  Source.h
Python/: main.py  temp.txt
lib/: 4DSource.cxx  CriticalPointsSet.cpp  CriticalPointsSet.h  CriticalPointsSubdivide.cpp  CriticalPointsSubdivide.h  CriticalPointsTrivial.cpp  CriticalPointsTrivial.h  DoubleImageRenderer.cpp  DoubleImageRenderer.h  DrawPointOnImage.cpp  DrawPointOnImage.h  DrawPointsOnImage.cpp  DrawPointsOnImage.h  FeatureFlowField4D.cpp  FeatureFlowField4D.h  ImageRenderer.cpp  ImageRenderer.h  ImageRenderer3D.cpp  ImageRenderer3D.h  LIC.cpp  LIC.h  MultiparameterDependentStructuredGridnD.cpp  MultiparameterDependentStructuredGridnD.h  PointSetSubspace.cpp  PointSetSubspace.h  PointSetTo3D.cpp  PointSetToScalarField.cpp  PointSetToScalarField.h  PointSource.cpp  PointSource.h  Slider.cpp  Slider.h  SliderObserver.h  Source4D.cpp  Source4D.h  StructuredGridnD.cpp  StructuredGridnD.h  StrucutredGridToImage.cpp  StrucutredGridToImage.h  Subspace.cpp  (+5 more)
lib/DataType/: BifurcationPoint.cpp  BifurcationPoint.h  CriticalPoint.cpp  CriticalPoint.h  FeatureFlowField.cpp  FeatureFlowField.h  ParameterDependentVectorField.cpp  ParameterDependentVectorField.h  Point.cpp  Point.h  ProcessObject.cpp  ProcessObject.h  SpaceVector.cpp  SpaceVector.h  Vector.cpp  Vector.h  VectorField.cpp  VectorField.h  VectorField2D.cpp  VectorField2D.h  VectorField4D.cpp  VectorField4D.h
lib/DataTypeFilter/: GetPointsSet.cpp  GetPointsSet.h  GetVectorField.cpp  GetVectorField.h
lib/Filter/: CalculateBifurcationPoints.cpp  CalculateBifurcationPoints.h  CalculateCriticalPoints.cpp  CalculateCriticalPoints.h  CalculateFFF.cpp  CalculateFFF.h  CalculateFFField.cpp  CalculateFFField.h  CalculateFFPoints.cpp  CalculateFFPoints.h  CriticalPointsSet.cpp  CriticalPointsSet.h  DrawPointsOnImage.cpp  DrawPointsOnImage.h  FFF.cpp  FFF.h  LIC.cpp  LIC.h  PointSetSubspace.cpp  PointSetSubspace.h  PointSetTo3D.cpp  PointSetTo3D.h  PointSetToScalarField.cpp  PointSetToScalarField.h  PointSource.cpp  PointSource.h  ReformDimension.cpp  ReformDimension.h  Subspace.cpp  Subspace.h  Subspace4D2D.cpp  Subspace4D2D.h  VectorFieldToImageData.cpp  VectorFieldToImageData.h
lib/PipelineDefs/: DoubleFilter.h  DoubleRenderer.h  Filter.h  Renderer.h  Source.h  Updatable.h
lib/Renderer/: CriticalPointRenderer3D.cpp  CriticalPointRenderer3D.h  DoubleImageRenderer.h  DoubleImageRenderer2D.cpp  DoubleImageRenderer2D.h  ImageRenderer.cpp  ImageRenderer.h  ImageRenderer2D.cpp  ImageRenderer2D.h  ImageRenderer3D.cpp  ImageRenderer3D.h  ImageRenderer4D.cpp  ImageRenderer4D.h  PolyDataRenderer.cpp  PolyDataRenderer.h
lib/Slider/: Slider.h  SliderObserver.h
lib/Source/: PointSource.cpp  PointSource.h  TestSource.cpp  TestSource.h  VectorFieldSource.cpp  VectorFieldSource.h
src/: Comments.txt  Main.cxx
